--- a/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
+++ b/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
@@ -1,15 +1,18 @@
-<mat-divider></mat-divider>
-  <div class="mt-3">
-    <select size="9" class="form-select bg-light" #mySelect>
-      <option class="p-1" (click)="onSelectWord($event)" *ngFor="let item of itemList | filter:'orth':selMod:currentEntry; index as i" value="{{item}}">
-        {{item}}
+ <div class="mt-3">
+    <select size="9" class="form-select bg-light">
+      <option
+        class="p-1"
+        (click)="onSelectWord($event)"
+        *ngFor="let item of itemList | filter:selMod:currentEntry;
+        index as i"
+        value="{{item}}"
+      >
+        {{item.word}}
       </option>
-<!--      <option *ngFor="let item of itemList | json" value="{{item}}" >{{item}}</option>-->
     </select>
   </div>
-  <mat-divider></mat-divider>
-  <div class="mt-3">
-    <select size="3" class="form-select bg-light w-100"></select>
+  <div class="mt-2">
+    <select size="2" class="form-select bg-light w-100"></select>
 </div>
 
 
