--- a/src/app/Components/show-images/show-images.component.html
+++ b/src/app/Components/show-images/show-images.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <h4 class="mt-3 p-2">Galería de Imagenes</h4>
   <mat-divider></mat-divider>
-  <div class="container_img mt-3">
+  <div class="container_img  container mt-3">
     <mat-card *ngFor="let img of imagesGalery; index as i;">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Imagen {{i+1}}</mat-card-title>
+        <mat-card-title>{{img.word}}</mat-card-title>
         <!--      <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
       </mat-card-header>
-      <img mat-card-image class="imgCss" [src]="img" style="background-size: contain;">
+        <img mat-card-image class="imgCss"   [src]="img.img">
     </mat-card>
   </div>
 </div>
