--- a/src/app/Components/show-videos/show-videos.component.html
+++ b/src/app/Components/show-videos/show-videos.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <h4 class="mt-3 p-2">Galería de Videos</h4>
   <mat-divider></mat-divider>
-  <div class="row">
-    <div class="col-lg-3 col-md-4 col-sm-6" *ngFor="let videos of videosGalery">
-      <mat-card class="mat-elevation-z0" >
-        <mat-card-header>Hola</mat-card-header>
-        <video mat-card-image width="100%" height="200px" src="" controls controlslist></video>
+  <div class="container_videos">
+    <!-- <div class="col-lg-3 col-md-4 col-sm-6"> -->
+      <mat-card class="mat-elevation-z0" *ngFor="let videos of videosGalery;index as i">
+        <mat-card-header>palabra: {{i}}</mat-card-header>
+        <video mat-card-image width="100%" height="200px" [src]="videos" controls controlslist></video>
       </mat-card>
-    </div>
+    <!-- </div> -->
   </div>
 </div>
 
