--- a/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
+++ b/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
@@ -1,6 +1,6 @@
  <div class="mt-2">
    <label class="fw-bold">Lista de palabras: </label>
-    <select size="9" class="form-select border-dark bg-light">
+    <select size="8" class="form-select mat-elevation-z1 bg-light">
       <option
         class="p-1"
         (click)="onSelectWord($event)"
@@ -17,7 +17,7 @@
     <label class="fw-bold">
       ¿No querrás decir?
     </label>
-    <select size="2" class="form-select border-dark bg-light w-100"></select>
+    <select size="2" class="form-select mat-elevation-z1 bg-light w-100"></select>
 </div>
 
 
