--- a/src/app/Components/modals/video-modal/video-modal.component.html
+++ b/src/app/Components/modals/video-modal/video-modal.component.html
@@ -4,6 +4,6 @@
       <mat-icon class="mb-1" svgIcon="close"></mat-icon>
     </button>
   </div>
-  <video class="container" [src]="videoSrc"  controls="controls"></video>
+  <video class="container-fluid" [width]="'640'" [height]="'480'" [autoplay]="true" [src]="videoSrc"  controls="controls"></video>
 </div>
 
