--- a/src/app/Components/show-estadistics/show-estadistics.component.html
+++ b/src/app/Components/show-estadistics/show-estadistics.component.html
@@ -1,1 +1,174 @@
-<p>show-estadistics works!</p>
+<section id="estadistics-show">
+  <div class="container-fluid">
+      <h2 class="fw-bolder text-center p-3">Estad&iacute;sticas</h2>
+      <mat-divider></mat-divider>
+
+    <h2 class="mt-3"><u>Estad&iacute;sticas Generales</u></h2>
+    <table width="100%" cellspacing="10" cellpadding="0" bgcolor="#E0E7F0">
+      <tr>
+        <td width="10"></td>
+        <td>Entradas: 11937</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Acepciones: 21661</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Ilustraciones: 1625</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Videos: 52</td>
+      </tr>
+    </table>
+    <br />
+    <h2><u>Número de entradas por categoría</u></h2>
+    <table width="100%" cellspacing="10" cellpadding="0" bgcolor="#E0E7F0">
+      <tr>
+        <td width="10"></td>
+        <td>Sust.: 7952</td>
+        <td>Pronombres: 85</td>
+        <td>Interjs.: 14</td>
+        <td rowspan="4"><img src="../../../assets/gra01.png" border="1" /></td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Adjetivos: 2794</td>
+        <td>Conjs.: 21</td>
+        <td>Artículos: 5</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Verbos: 2061</td>
+        <td>Preps.: 23</td>
+        <td>Afijos: 114</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Adverbios: 127</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+    <br />
+    <h2><u>Entradas y otras palabras relacionadas</u></h2>
+    <table width="100%" cellspacing="10" cellpadding="0" bgcolor="#E0E7F0">
+      <tr>
+        <td width="10"></td>
+        <td>Sinónimos: 6561</td>
+        <td>Aumentativos: 69</td>
+        <td>Locuciones: 1278</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Antónimos: 1300</td>
+        <td>Diminutivos: 1499</td>
+        <td>Fraseologismos: 701</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Afines: 893</td>
+        <td></td>
+        <td>Refranes: 39</td>
+      </tr>
+    </table>
+    <br />
+    <h2><u>Tipo de uso e información geográfica</u></h2>
+    <table width="100%" cellspacing="10" cellpadding="0" bgcolor="#E0E7F0">
+      <tr>
+        <td width="10"></td>
+        <td>Coloquial: 163</td>
+        <td>Americanismos: 331</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Despectivo: 14</td>
+        <td>Anglicismos: 64</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Familiar: 0</td>
+        <td>Cubanismos: 441</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Figurado: 749</td>
+        <td>Galicismos: 26</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Popular: 26</td>
+        <td></td>
+      </tr>
+    </table>
+    <br />
+    <h2><u>Área de conocimiento</u></h2>
+    <table width="100%" cellspacing="10" cellpadding="0" bgcolor="#E0E7F0">
+      <tr>
+        <td width="10"></td>
+        <td>Anatomía: 55</td>
+        <td>Geología: 10</td>
+        <td>Meteorología: 9</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Arquitectura: 7</td>
+        <td>Geografía: 6</td>
+        <td>Militar: 36</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Astronomía: 9</td>
+        <td>Geometría: 58</td>
+        <td>Mitología: 4</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Biología: 33</td>
+        <td>Gramática: 116</td>
+        <td>Música: 40</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Botánica: 28</td>
+        <td>Informática: 70</td>
+        <td>Política: 2</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Deporte: 68</td>
+        <td>Lingüística: 39</td>
+        <td>Química: 34</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Derecho: 32</td>
+        <td>Literatura: 34</td>
+        <td>Religión: 21</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Electricidad: 10</td>
+        <td>Marina: 17</td>
+        <td>Zoología: 21</td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Física: 39</td>
+        <td>Matemáticas: 87</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td width="10"></td>
+        <td>Fonética: 10</td>
+        <td>Medicina: 76</td>
+        <td></td>
+      </tr>
+    </table>
+    <br />
+  </div>
+</section>
