--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
@@ -4,18 +4,6 @@
 .example-card{
   background-color: #f1f1f1;
 }
-.container_words {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-gap: 10px;
-}
-@media screen and (max-width: 640px) {
-  .container_words {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-}
 .matCardGenerator:hover{
   background-color: #2B4865;
   color: white;
@@ -33,9 +21,32 @@
   /*bottom: 10px;*/
   margin: 5px;
 }
-.hiddenSelect{
-  background-color: #ccc;
-}
 .icon-hover:hover{
   cursor: pointer;
 }
+.select-style button{
+  margin: 0 1px;
+}
+.card{
+  padding: 1% 2%;
+}
+.genrer{
+  display: flex;
+  justify-content: space-between;
+}
+.tecnicaly{
+  flex: 1 0 auto;
+}
+.icon-button{
+  width: 28px;
+  height: 28px;
+}
+
+.select-style2 button{
+  margin: 0 3px;
+}
+.lemma-css:hover{
+  cursor: pointer;
+  color: blue;
+}
+
