--- a/src/app/Components/show-videos/show-videos.component.html
+++ b/src/app/Components/show-videos/show-videos.component.html
@@ -1,13 +1,24 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-2 col-md-3 col-sm-4" *ngFor="let item of videosGalery">
-      <button class="me-2" matTooltip="Click aquí para ver el video" (click)="onOpenVideo(item.src)" mat-icon-button>
-        <mat-icon class="svgcss" svgIcon="video_library"></mat-icon>
-      </button>
-      <span class="fw-bold">{{item.word}}</span>
+<section id="videos-show">
+  <div class="container">
+    <div class="row">
+      <h4 class="text-center fw-bolder">&Iacute;NDICE DE VIDEOS</h4>
+      <mat-divider></mat-divider>
+      <div class="">
+        <p class="fw-bolder fw-5">
+          Para ver el video, hay que hacer click sobre el icono. Si se hace click sobre la palabra
+          resaltada como hipervínculo, se accede directamente a la entrada.
+        </p>
+      </div>
+      <div class="col-lg-2 col-md-3 col-sm-4" *ngFor="let item of videosGalery">
+        <button class="me-2" matTooltip="Click aquí para ver el video" (click)="onOpenVideo(item.src)" mat-icon-button>
+          <mat-icon class="svgcss" svgIcon="video_library"></mat-icon>
+        </button>
+        <span class="fw-bold">{{item.word}}</span>
+      </div>
     </div>
   </div>
-</div>
+</section>
+
 
 
 
